# argus

./: .gitignore  Cargo.toml  README.md  plan.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: publish-pypi.yml  python-wheels.yml
python/argus_ffi/: __init__.py
python/tests/: test_import.py
src/: cli.rs  entropy.rs  ffi.rs  grammar.rs  heuristics.rs  keyword.rs  lib.rs  main.rs  output.rs  scan.rs  story.rs  utils.rs  wasm.rs
