[build-system]
requires = ["maturin>=1.4"]
build-backend = "maturin"

[project]
name = "argus-ffi"
version = "1.1.0"
description = "Argus FFI bindings (PyO3)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "AGPL-3.0" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.maturin]
bindings = "pyo3"
features = ["python-ffi"]
module-name = "argus_ffi"
python-source = "python"
